Try to silence a Surefire warning