@@ -74,7 +74,14 @@
 
     <build>
         <plugins>
-            <!-- Add any core-specific plugins here -->
-        </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --enable-native-access=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>        </plugins>
     </build>
 </project>
